--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+cloud.name=valleant
+cloud.secret=sLeumKeCRJ8WE1BOAwM3L9wqIxY
+cloud.key=514187156442181
+
+spring.jpa.hibernate.ddl-auto=create
+spring.h2.console.enabled=true
+spring.h2.console.path=/Hello-H2
 
